Fixed overflow. Updated box shadows.

--- a/src/styles/base-styles.css
+++ b/src/styles/base-styles.css
@@ -40,11 +40,13 @@ table {
 html {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
 
 body {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
 
 /* ====== VARS ====== */
@@ -61,7 +63,7 @@ body {
   --w-md: 600px;
   --w-lg: 768px;
   --w-xl: 992px;
-  --w-xxl: 1200px;
+  --w-xxl: 1024px;
 
   /* ====== FONTS ====== */
   --h1-font-size: 32px;
@@ -105,6 +107,7 @@ body {
 
 * {
   color: var(--text-color);
+  box-sizing: border-box;
 }
 
 a {
@@ -119,8 +122,9 @@ input:focus {
 }
 
 .content-layout {
-  padding-top: 30px;
+  padding: 30px 20px 0;
   margin: 0 auto;
+  max-width: 100%;
 }
 
 @media only screen and (max-width: 600px) {
@@ -147,9 +151,9 @@ input:focus {
   }
 }
 
-@media only screen and (min-width: 14400px) {
+@media only screen and (min-width: 1200px) {
   .content-layout {
-    width: var(--w-sm);
+    width: var(--w-xxl);
   }
 }
 
