--- a/src/styles/nav-menu.css
+++ b/src/styles/nav-menu.css
@@ -45,7 +45,7 @@
   height: 100%;
   border-radius: 20px;
   border: 1px solid var(--black);
-  background-color: var(--grey-20);
+  background-color: var(--grey-10);
   padding-left: 32px;
   color: var(--black);
 }
@@ -71,7 +71,7 @@
   object-fit: contain;
   object-position: center;
   border-radius: 50%;
-  background-color: var(--grey-20);
+  background-color: var(--grey-10);
   position: relative;
   top: 50%;
   transform: translateY(-50%);
@@ -84,7 +84,7 @@
   top: 100%;
   width: 150px;
   flex-direction: column;
-  background-color: var(--grey-20);
+  background-color: var(--grey-10);
   border: 1px solid var(--black);
 }
 
